# mneia

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli-reference.md  configuration.md  connectors.md  conversational-interface.md  daemon-agents.md  enrichment.md  interactive-mode.md  knowledge-pipeline.md  marketplace.md  mcp-integration.md  safety.md
marketplace/: index.json
src/mneia/: cli.py  config.py  conversation.py  interactive.py  menubar.py  output.py  tui.py
src/mneia/agents/: autonomous.py  enrichment.py  hermes_bridge.py  hermes_tools.py  knowledge.py  listener.py  meta.py  reasoning.py  web_research.py  worker.py
src/mneia/connectors/: __init__.py  apple_notes.py  asana.py  audio_transcription.py  chrome_history.py  confluence.py  github.py  google_auth.py  google_calendar.py  google_drive.py  google_gmail.py  granola.py  jira.py  linear.py  live_audio.py  local_folders.py  notion.py  obsidian.py  screencapturekit_audio.py  slack.py  todoist.py  transcription_engine.py  web_scraper.py  zoom.py
src/mneia/context/: watcher.py
src/mneia/context/templates/: beliefs.j2  claude_md.j2  decisions.j2  people.j2  projects.j2
src/mneia/core/: agent.py  agent_stats.py  connector.py  lifecycle.py  llm.py  llm_setup.py  metrics.py  permissions_db.py  retry.py  safety.py  scheduler.py  watcher.py
src/mneia/marketplace/: installer.py  registry.py
src/mneia/mcp/: resources.py  server.py  tools.py
src/mneia/memory/: cognitive.py  embeddings.py  graph.py  graphrag.py  persistent.py  session_manager.py  store.py  vector_store.py
src/mneia/pipeline/: associate.py  extract.py  generate.py  ingest.py  ner.py  rerank.py  structured.py  summarize.py
src/mneia/tui/: __init__.py  app.py  bridge.py  styles.tcss
src/mneia/tui/screens/: __init__.py  agents.py  chat.py  connectors.py  dashboard.py  graph.py  search.py  settings.py
src/mneia/tui/widgets/: __init__.py  agent_card.py  chat_view.py  command_bar.py  doc_viewer.py  search_result.py  sidebar.py  status_header.py
tests/: conftest.py
tests/connectors/: test_apple_notes.py  test_asana.py  test_audio_transcription.py  test_chrome_content.py  test_chrome_history.py  test_confluence.py  test_gmail.py  test_google_auth.py  test_google_calendar.py  test_google_drive.py  test_jira.py  test_live_audio.py  test_new_connectors.py  test_notion.py  test_obsidian.py  test_screencapturekit_audio.py  test_zoom.py
tests/integration/: test_cli_commands.py
tests/unit/: test_agent_stats.py  test_associate.py  test_autonomous.py  test_circuit_breaker.py  test_config.py  test_config_env.py  test_context_watcher.py  test_conversation.py  test_conversation_source_hints.py  test_embeddings.py  test_enrichment.py  test_extraction.py  test_generate.py  test_google_llm.py  test_hermes_bridge.py  test_hermes_tools.py  test_ingest_auth.py  test_installer.py  test_interactive.py  test_knowledge_agent.py  test_knowledge_graph.py  test_lifecycle.py  test_llm_setup.py  test_marketplace.py  test_mcp_server.py  test_memory_store.py  test_metrics.py  test_output.py  test_permissions_db.py  test_persistent_memory.py  test_reasoning.py  test_retry.py  test_safety.py  test_session_manager.py  test_source_detection.py  test_store_source_search.py  test_vector_store.py  test_watch_mode.py  test_watcher.py  test_web_research.py  (+1 more)
