[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneia"
version = "0.1.0"
description = "Autonomous multi-agent personal knowledge system"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Dimitris Sotiriou" }]
readme = "README.md"
keywords = ["ai", "agents", "knowledge", "memory", "personal", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "networkx>=3.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "watchfiles>=0.21",
    "prompt_toolkit>=3.0",
    "textual>=0.80",
]

[project.optional-dependencies]
google = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]
atlassian = ["atlassian-python-api>=3.0"]
notion = ["notion-client>=2.0"]
audio = ["faster-whisper>=1.0"]
web = ["crawl4ai>=0.4", "playwright>=1.40"]
vector = ["chromadb>=0.5"]
mcp = ["mcp>=1.0"]
all = ["mneia[google,atlassian,notion,audio,web,vector,mcp]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/riverphoenix/mneia"
Repository = "https://github.com/riverphoenix/mneia"
Issues = "https://github.com/riverphoenix/mneia/issues"

[project.scripts]
mneia = "mneia.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mneia"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
