[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mneia"
version = "0.2.0"
description = "Autonomous multi-agent personal knowledge system"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Dimitris Sotiriou", email = "mneia@dsotiriou.dev" }]
readme = "README.md"
keywords = [
    "ai", "agents", "knowledge", "memory", "personal", "cli",
    "rag", "knowledge-graph", "llm", "ollama", "obsidian",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "networkx>=3.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "watchfiles>=0.21",
    "prompt_toolkit>=3.0",
    "textual>=0.80",
    "litellm>=1.75",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
hermes = ["hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git"]
atlassian = ["atlassian-python-api>=3.0"]
notion = ["notion-client>=2.0"]
audio = ["faster-whisper>=1.0", "sounddevice>=0.4"]
web = ["crawl4ai>=0.4", "playwright>=1.40"]
vector = ["chromadb>=0.5"]
intelligence = ["instructor>=1.0", "gliner>=0.2", "rerankers>=0.5"]
graphrag = ["lightrag-hku>=0.1"]
cognitive = ["cognee>=0.1"]
mcp = ["mcp>=1.0"]
all = ["mneia[atlassian,notion,audio,web,vector,intelligence,graphrag,cognitive,mcp]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/riverphoenix/mneia"
Documentation = "https://github.com/riverphoenix/mneia/tree/master/docs"
Repository = "https://github.com/riverphoenix/mneia"
Issues = "https://github.com/riverphoenix/mneia/issues"
Changelog = "https://github.com/riverphoenix/mneia/releases"

[project.scripts]
mneia = "mneia.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mneia"]

[tool.hatch.build.targets.sdist]
include = ["src/mneia", "README.md", "LICENSE", "docs"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true